Hotfix: dont use page.date. Change tab title so .pdf filename can be used by default.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- What'cha looking for, maybe github.com/mrmattbusby/mrmattbusby.github.io ? Yes, I made this. Check the README on how-to yourself. -->
+<!-- What'cha looking for, maybe github.com/mrmattbusby/mrmattbusby.github.io? Yes, I made this. Check the README on how-to yourself. -->
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ page.title "}}</title>
+  <title>{{ page.title }} {{ page.author }} {{ site.time | date: "%Y-%m" }}</title>
   <link rel="stylesheet" href="/assets/css/styles.css">
   <link rel="icon" href="/assets/favicon.png?w=32" sizes="32x32" type="png">
   <link rel="shortcut icon" href="/assets/favicon.png?w=32" sizes="32x32" type="image/png">
