--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -176,7 +176,7 @@ h1 + ul + p {
         overflow: hidden;
     } */
 
-    body, content {
+    body, .content {
         margin: 0;
         padding: 0;
         width: 100%;
