Testfix: Hack: In print, just add some pixels to italics. The answer is probably more correctly to add padding to .content though.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -216,6 +216,11 @@ h1 + ul + p {
         page-break-inside: avoid;
     }
 
+    /* Hack: Fix italicized text that might extend beyond bounds */
+    em, i, .italic {
+        padding-right: 3px; /* Italics can extend slightly */
+    }
+
     /* Do not underline abbr tags in PDF */
     abbr {
         text-decoration: none;
