--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,6 +57,12 @@ p {
     padding: 0;
 }
 
+/* Paragraph immediately after Contact List = Objective/Summary */
+h1 + p {
+    margin: 0.75em 1.5em 0 1.5em;
+    text-align: justify;
+}
+
 ul {
     padding: 0;
     margin: -0.5em 1.5em 0 1.5em;
@@ -118,12 +124,6 @@ code {
 .twocollist > li {
     break-inside: auto;   /* don't interfere with grid */
     page-break-inside: avoid;
-}
-
-/* Paragraph immediately after Contact List = Summary */
-h1 + ul + p {
-    margin: 0.75em 1.5em 0 1.5em;
-    text-align: justify;
 }
 
 @media screen and (max-width: 800px) {
