--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -64,8 +64,8 @@ h2 + p {
 }
 
 /* Experience intros */
-h4 + p {
-    margin: 0 1.5em 0.5em 0;
+h3 + p {
+    margin: -0.1em 1.5em 0.5em 0;
     text-align: justify;
 }
 
