--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,14 +31,14 @@ h2 {
     border-bottom: 1px solid #000000;
     text-transform: uppercase;
     font-size: 130%;
-    margin: 1em 0 0 0;
+    margin: 0.75em 0 0 0;
     padding: 0;
 }
 
 h3 {
     font-size: 115%;
     text-transform: uppercase;
-    margin: 0.7em 0 0.3em 0;
+    margin: 0.6em 0 0.3em 0;
     padding: 0;
     display: flex;
     justify-content: space-between;
@@ -81,7 +81,7 @@ li {
 /* Education */
 blockquote {
     padding: 0;
-    margin: 0 1.5em;
+    margin: 0 0.75em 0 1.5em;
 }
 
 blockquote > p {
