--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ page.title }} {{ page.author }} {{ site.time | date: "%Y-%m" }}</title>
+  <title>{{ page.author }}_{{ page.title }}_{{ site.time | date: "%Y-%m" }}</title>
   <link rel="stylesheet" href="/assets/css/styles.css">
   <link rel="icon" href="/assets/favicon.png?w=32" sizes="32x32" type="png">
   <link rel="shortcut icon" href="/assets/favicon.png?w=32" sizes="32x32" type="image/png">
