--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,7 +57,7 @@ p {
     padding: 0;
 }
 
-/* Paragraph immediately after Contact List = Objective/Summary */
+/* Objective/Summary */
 h2 + p {
     margin: 0.25em 1.5em 0 1.5em;
     text-align: justify;
@@ -71,7 +71,7 @@ h3 + p {
 
 ul {
     padding: 0;
-    margin: -0.5em 1.5em 0 1.5em;
+    margin: 0 1.5em;
 }
     
 li {
@@ -89,16 +89,6 @@ blockquote > p {
     margin: 0;
 }
     
-code {
-    background-color: #e0e0e0;
-    color: #212121;
-    font-family: "SFMono-Regular","Consolas","Liberation Mono","Menlo",monospace;
-    font-size: 10pt;
-    border-radius: 0.4rem;
-    padding: .2rem .4rem;
-}
-
-/* Flat Lists, e.g. Contact List */
 .flatlist {
     text-align: center;
     margin: 0;
@@ -135,7 +125,7 @@ code {
 
 @media screen and (max-width: 800px) {
     body {
-        font-size: 1.0em;            /* modest boost, not 16pt */
+        font-size: 1.0em;
         margin: 0;
         padding: 0;
         background: #EEEEEE;
@@ -144,19 +134,19 @@ code {
     .content {
         margin: 0;
         padding: 1em;
-        max-width: none;            /* remove 800px limit */
+        max-width: none;                   /* remove 800px limit */
         width: 94%;
-        background: #fffff3d1;      /* preserve your background */
-        border: 1px solid #CCCCCC;  /* keep border */
+        background: #fffff3d1;           /* preserve your background */
+        border: 1px solid #CCCCCC;       /* keep border */
         box-shadow: 2px 2px 4px #AAAAAA; /* keep subtle shadow */
     }
 
     .twocollist {
-        columns: 1;                 /* collapse to single column */
+        columns: 1;
     }
 
     h1, h2, h3, h4 {
-        text-align: center;         /* readability */
+        text-align: center;
     }
 
     ul {
@@ -173,26 +163,19 @@ code {
     }
 }
 
-/* Print */
 @media print {
 
     /* Try to fit all in 2pgs, adjust these... */
-
-    /* html, body {
-        height: 200vh;
-        overflow: hidden;
-    } */
-
     body {
-        font-size: 9.6pt;
-        line-height: 1.0;
+        font-size: 11pt;
+        line-height: 1.05;
         background: none;
         margin: 0;
         padding: 0;
         overflow: visible !important;
     }
 
-    /* Get rid of cool paper effect */
+    /* Get rid of paper effect */
     .content {
         border: 0px;
         background: none;
@@ -210,6 +193,7 @@ code {
     }
 
     /* Force 2 columns */
+    /* REMOVEME? */
     .twocollist {
         columns: 2 !important;
         -webkit-columns: 2 !important;
@@ -224,6 +208,7 @@ code {
     }
 
     /* Hack: Fix italicized text that might extend beyond bounds */
+    /* REMOVEME? */
     em, i, .italic {
         padding-right: 3px; /* Italics can extend slightly */
     }
@@ -234,16 +219,14 @@ code {
         font-variant: none;
     }
     /* Make links black in PDF */
-    /* Move this outside the print block to apply this in HTML too */
     a, a:link, a:visited, a:hover {
         color: #000000;
         text-decoration: underline;
     }
 }
+
 @page {
     /* Change margins and paper size of PDF */
-    /* https://developer.mozilla.org/en-US/docs/Web/CSS/@page */
     size: letter;
-    /*margin: 0.5in 0.8in;*/
-    margin: 0.4in 0.6in;
+    margin: 0.5in 0.8in;
 }
